# sample-ai-persona

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  destroy.sh  openapi_mcp.json  pyproject.toml  run_htmx.py  tailwind.config.js
.claude/rules/: architecture.md
.github/workflows/: cdk.yml  docker.yml  lint.yml  release.yml  test.yml
.kiro/steering/: architecture.md  cdk.md  deploy.md  product.md  tech.md
cdk/: README.md  package-lock.json  package.json  parameters.ts  tsconfig.json
cdk/lib/: agentcore-memory-stack.ts  ai-persona-stack.ts  cognito-stack.ts  ecr-stack.ts  mcp-gateway-stack.ts  waf-stack.ts
docs/: data_agent_integration.md  remote_mcp_guide.md  remote_mcp_setup.md  troubleshooting_guide.md  user_guide.md
docs/note/: module-dependencies.md
sample_data/: sample_custom_personas_500.csv  sample_product_reviews.csv  sample_purchase_history.csv
scripts/: build-css.sh  create_bedrock_batch_role.py  create_dynamodb_tables.py  generate_custom_sample.py  generate_mcp_openapi.py  generate_sample_personas.py
src/: __init__.py  config.py
src/managers/: __init__.py  agent_discussion_manager.py  dataset_manager.py  discussion_manager.py  file_manager.py  interview_manager.py  job_manager.py  persona_generation_manager.py  persona_manager.py  persona_memory_manager.py  report_manager.py  settings_manager.py  survey_analysis_manager.py  survey_dataset_manager.py  survey_execution_manager.py  survey_manager.py  survey_template_manager.py
src/models/: __init__.py  dataset.py  demographics.py  discussion.py  discussion_report.py  insight.py  insight_category.py  interview_session.py  job.py  knowledge_base.py  memory.py  message.py  persona.py  survey.py  survey_template.py
src/services/: __init__.py  (+11 more)
tests/: conftest.py
web/: __init__.py  main.py  middleware.py  sanitize.py
(+201 files in other folders)
